# Raycasting_with_allegro_4.4

./: CMakeLists.txt  Textures.h  lost.h  main.c  sprites.h  title.h
includes/: fonction_allegro.h
src/: fonction_allegro.c  main.c
textures/: All_Textures.h  All_Textures2.h  sky.h  sprites_2.h  won.h
